fixin z-index

--- a/app/assets/stylesheets/layout/_base.scss
+++ b/app/assets/stylesheets/layout/_base.scss
@@ -61,8 +61,8 @@ p{
   right: 1%;
   border: 2px solid #EEEEEE;
   border-radius: 5px;
-  z-index: 500;
-  margin-top: 1%;
+  z-index: 5000000000;
+  margin-top: 11%;
   background-color: white;
 }
 
@@ -170,6 +170,8 @@ svg{
 }
 
 .wiki{
+  z-index:1000;
+  overflow: visible;
   position: fixed;
   bottom: 0;
   height: 0%;
